<resources>
    <string name="app_name">practiceOnLinearLayout</string>
    <string name="welcome_message">Welcome Back</string>
    <string name="login_message">Login to your account</string>
    <string name="username_hint">enter your username</string>
    <string name="password_hint">enter your password</string>
    <string name="remember">Remember me</string>
    <string name="forget">Forget Password?</string>
    <string name="login">Login</string>
</resources>