<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:gravity="center"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/color1"
        android:textAllCaps="true"
        android:text="@string/welcome_message"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/color2"
        android:text="@string/login_message"
        />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/username_hint"
        android:background="#66BDB3B3"
        android:textColor="@color/color1"
        android:textColorHint="@color/color1"
        android:paddingLeft="20dp"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:background="#66BDB3B3"
        android:textColor="@color/color1"
        android:textColorHint="@color/color1"
        android:paddingLeft="20dp"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="0.5"
            android:text="@string/remember"
            android:textColor="@color/color2"
            android:textColorHighlight="@color/color1"
            android:textColorLink="@color/color1"
            android:textCursorDrawable="?android:attr/listChoiceIndicatorSingle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/forget"
            android:textAlignment="viewEnd"
            android:textColor="@color/color1"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/login"
        />


</LinearLayout>

